# QA-Testing-Agent

./: .env  .gcloudignore  .replit  Dockerfile  README.md  deploy.sh  implementation_plan.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  replit.md
artifacts/api-server/: package.json
artifacts/api-server/src/: app.ts
artifacts/api-server/src/routes/: index.ts
artifacts/api-server/src/routes/designguard/: agent.ts  fix-generator.ts  index.ts  (+1 more)
artifacts/designguard/: index.html  package.json  requirements.yaml
artifacts/designguard/.replit-artifact/: artifact.toml
artifacts/designguard/src/: App.tsx  index.css
artifacts/designguard/src/components/: app-sidebar.tsx  code-block.tsx  top-nav.tsx
artifacts/designguard/src/lib/: api.ts
artifacts/designguard/src/pages/: fix-executor.tsx  history.tsx  not-found.tsx  results.tsx
attached_assets/: Pasted-Build-a-full-stack-AI-agent-application-called-DesignGu_1773562354054.txt  Pasted-DesignGuard-is-a-full-stack-autonomous-QA-testing-agent_1773592628012.txt
backend/: figma_compare.py  fix_generator.py  functional_qa.py  models.py  playwright_navigator.py  requirements.txt  test.db  violation_detector.py  visual_qa.py
designguard/backend/: agent.py  dom_a11y_qa.py  gemini_vision.py  main.py  memory.py  report_generator.py  security_qa.py  test_backend.py  test_pdf.py
frontend/: vite.config.ts
frontend/src/components/: violation-badge.tsx
frontend/src/context/: scan-context.tsx
frontend/src/pages/: scan.tsx
lib/api-spec/: openapi.yaml
lib/db/src/schema/: index.ts  scans.ts
